# satellite

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  NORAD_TLE.txt  README.md  Skybox.glb  Sun.glb  a.out  imgui.ini  space
.cache/clangd/index/: Main.cpp.3FA105027891E0DE.idx  SGP4.cpp.B00A306BB2381F8A.idx  SGP4.h.70D6D812A270D2A8.idx  raylib.h.BC905507BC108F0C.idx
Datasets/: NORAD_TLE.txt
Shaders/: Atmosphere.fs  Lighting.fs  LightingDefault.vs  LightingInstanced.vs
Src/: Config.hpp  Dataset.cpp  Dataset.hpp  DatasetCache.cpp  DatasetCache.hpp  Filter.hpp  Hash.hpp  Main.cpp  Mem.hpp  RenderHelpers.cpp  RenderHelpers.hpp  Satellite.hpp  Slice.hpp  String.cpp  String.hpp  Types.hpp  Vec3.hpp
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  ZERO_CHECK.lastbuildstate
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
